all core feature should now working

--- a/client/src/app/stylesheets/main.css
+++ b/client/src/app/stylesheets/main.css
@@ -3,6 +3,7 @@
 @import "https://fonts.googleapis.com/css?family=Poppins";
 @import "https://fonts.googleapis.com/css?family=Fjalla+One";
 @import "https://fonts.googleapis.com/css?family=Mukta";
+@import "https://fonts.googleapis.com/css?family=Open+Sans";
 
 /** color:
   * green - rgb(106, 252, 93)
